FOOTBALLTRADING 1.0
Primera version funcional de la pagina Football Trading
