# foot-trading/src/App.js
@@ -11,9 +11,14 @@ import Register from './pages/register.jsx';
 import Login from './components/login.jsx'; // Importa el componente de inicio de sesión
 import Profile from './pages/profile.jsx'; // Importa el componente de perfil
 import MyProducts from './pages/myProducts.jsx';
+import TransactionProducts from './pages/transactionProducts.jsx';
+import PaymentSuccess from './pages/paymentSuccess.jsx';
 import { CartProvider } from './services/cartContext.js';
 import { ProductProvider } from './services/productContext.js';
 import { UserProvider } from './services/userContext.js'; // Importa el UserProvider
+import Contact from './pages/contact.jsx';
+import ForgotPassword from './pages/forgotPassword';
+import ResetPassword from './pages/resetPassword';
 
 function App() {
   return (
@@ -33,6 +38,11 @@ function App() {
                 <Route path="/login" element={<Login />} /> {/* Añade la ruta de inicio de sesión */}
                 <Route path="/profile" element={<Profile />} /> {/* Añade la ruta de perfil */}
                 <Route path="/my-products" element={<MyProducts />} /> {/* Nueva ruta */}
+                <Route path="/transaction-products" element={<TransactionProducts />} />
+                <Route path="/payment-success" element={<PaymentSuccess />} />
+                <Route path="/contact" element={<Contact />} /> {/* Nueva ruta */}
+                <Route path="/forgot-password" element={<ForgotPassword />} />
+                <Route path="/reset-password/:token" element={<ResetPassword />} />
                 {/* Add other routes here */}
               </Routes>
               <Footer />
